fixed w3 validation error

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
 
       <table>
-        <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a><caption>
+        <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
       <thead>
         <tr>
           <th scope="col" class="colhead">Position</th>
